src/hir/passes/snapshots/transmute__hir__passes__implicit_ret_converter__tests__explicit_return.snap
---
source: src/hir/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret 42;
}

