src/hir/passes/snapshots/transmute__hir__passes__implicit_ret_converter__tests__implicit_return_if_full_with_explicit.snap
---
source: src/hir/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret if c {
    ret 42;
  }
  else {
    43;
  };
}

