src/hir/passes/snapshots/transmute__hir__passes__implicit_ret_converter__tests__implicit_return_simple.snap
---
source: src/hir/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  41;
  ret 42;
}

